Added about us information

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html lang="en-US">
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>Webpage Title</title>
-</head>
+<head>Design Topia</head>
 
 <body>
   <main>
+    <nav>
+      <ul>
+        <h1>What is your website about and what will it do?</h1>
+        <p1>Our website is all about building and designing your dream home. You could also cooperate in a community with other players online. Other people persepective and style of designing are not the same, so why not build your own ideas of house designing. It will make you feel like it is  reality and you could also invite your friends to play this as well.</p1>
+        <li></li>
+
+        <li></li>
+
+      </ul>
+    </nav>
     <section>
-      <h1>Section Title</h1>
-      <p>Section paragraph text...</p>
+      
     </section>
   </main>
 </body>
