Fixed the page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en-US">
 
-<head>Design Topia</head>
+<head>
+  <title>Design Topia</title>
+</head>
 
 <body>
   <main>
